Fixing Arabic issues

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Random Game</string>
     <string name="rotate_btn_txt">دوران</string>
+    <string name="login_btn">دخول</string>
+    <string name="roll_btn">ارمى</string>
 </resources>
