--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="facebook_app_id">348049959438380</string>
     <string name="fb_login_protocol_scheme">fb348049959438380</string>
-    <string name="rotate_btn_txt">Rotate</string>
+    <string name="rotate_btn_txt">ROTATE</string>
     <string name="login_btn">Login</string>
     <string name="roll_btn">Roll</string>
     <string name="password_hint">Password</string>
