--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Random Game</string>
-    <string name="rotate_btn_txt">Tourner</string>
+    <string name="rotate_btn_txt">TOURNER</string>
+    <string name="roll_btn">JETER</string>
+    <string name="phone">TÉLÉPHONE</string>
+    <string name="password_hint">MOT DE PASSE</string>
+    <string name="confirm_password">CONFIRMER MOT DE PASSE</string>
+    <string name="country">PAYS</string>
+    <string name="email_hint">EMAIL</string>
+    <string name="login_btn">S\'IDENTIFIER</string>
+    <string name="name">NOM</string>
+    <string name="start_slot_btn">début</string>
+    <string name="continue_with_txt">ou continue avec</string>
+    <string name="don_t_have_account_tx">Vous n\'avez pas de compte? Créer une</string>
+    <string name="logout_sure">Êtes-vous sûr de vouloir vous déconnecter?</string>
+    <string name="cancel">Annuler</string>
+    <string name="logout">Connectez - Out</string>
 </resources>
