--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">Random Game</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 
-    <string name="facebook_app_id">348049959438380</string>
-    <string name="fb_login_protocol_scheme">fb348049959438380</string>
+    <string name="facebook_app_id" translatable="false">348049959438380</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb348049959438380</string>
     <string name="rotate_btn_txt">ROTATE</string>
     <string name="login_btn">Login</string>
     <string name="roll_btn">ROLL</string>
@@ -18,5 +18,8 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="name">Name</string>
     <string name="start_slot_btn">START</string>
+    <string name="logout">Logout</string>
+    <string name="logout_sure">Are you sure you want to logout?</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
