--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,16 +4,20 @@
     <string name="rotate_btn_txt">TOURNER</string>
     <string name="roll_btn">JETER</string>
     <string name="phone">TÉLÉPHONE</string>
-    <string name="password_hint">MOT DE PASSE</string>
-    <string name="confirm_password">CONFIRMER MOT DE PASSE</string>
-    <string name="country">PAYS</string>
-    <string name="email_hint">EMAIL</string>
+    <string name="password_hint">Mot de passe</string>
+    <string name="confirm_password">Confirme mot de passe</string>
+    <string name="country">Pays</string>
+    <string name="email_hint">Email</string>
     <string name="login_btn">S\'IDENTIFIER</string>
-    <string name="name">NOM</string>
+    <string name="name">Nom</string>
     <string name="start_slot_btn">début</string>
     <string name="continue_with_txt">ou continue avec</string>
     <string name="don_t_have_account_tx">Vous n\'avez pas de compte? Créer une</string>
     <string name="logout_sure">Êtes-vous sûr de vouloir vous déconnecter?</string>
     <string name="cancel">Annuler</string>
     <string name="logout">Connectez - Out</string>
+    <string name="create_account_btn">Créer un compte</string>
+    <string name="close">Fermer</string>
+    <string name="close_app">Fermer l\'application</string>
+    <string name="close_sure">Êtes-vous sûr de vouloir fermer l\'application?</string>
 </resources>
