--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,12 +5,12 @@
     <string name="login_btn">دخول</string>
     <string name="roll_btn">ارمى</string>
     <string name="don_t_have_account_tx">ليس لديك حساب؟ اصنع واحدا</string>
-    <string name="email_hint">البريد الإلكتروني</string>
-    <string name="password_hint">كلمة السر</string>
+    <string name="email_hint">البريد الإلكتروني*</string>
+    <string name="password_hint">كلمة السر*</string>
     <string name="continue_with_txt">أو استمر عن طريق</string>
     <string name="country">البلد</string>
-    <string name="confirm_password">تأكيد كلمة السر</string>
-    <string name="name">الاسم</string>
+    <string name="confirm_password">تأكيد كلمة السر*</string>
+    <string name="name">الاسم*</string>
     <string name="start_slot_btn">ابدأ</string>
     <string name="logout">تسجيل الخروج</string>
     <string name="logout_sure">هل أنت متأكد أنك تريد تسجيل الخروج؟</string>
