--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,19 @@
 <resources>
     <string name="app_name">Random Game</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
-
     <string name="facebook_app_id" translatable="false">348049959438380</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb348049959438380</string>
     <string name="rotate_btn_txt">ROTATE</string>
     <string name="login_btn">Login</string>
     <string name="roll_btn">ROLL</string>
-    <string name="password_hint">Password</string>
-    <string name="email_hint">Email</string>
+    <string name="password_hint">Password* (min 6 characters)</string>
+    <string name="email_hint">Email*</string>
     <string name="don_t_have_account_tx">Don\'t have an account ? Create one</string>
     <string name="continue_with_txt">Or continue with</string>
     <string name="country">Country</string>
     <string name="phone">Phone</string>
-    <string name="confirm_password">Confirm Password</string>
-    <string name="name">Name</string>
+    <string name="confirm_password">Confirm Password*</string>
+    <string name="name">Name*</string>
     <string name="start_slot_btn">START</string>
     <string name="logout">Logout</string>
     <string name="logout_sure">Are you sure you want to logout?</string>
