--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
     <string name="app_name">Random Game</string>
 
-    <string name="facebook_app_id" translatable="false">348049959438380</string>
-    <string name="fb_login_protocol_scheme" translatable="false">fb348049959438380</string>
+    <string name="facebook_app_id" translatable="false">340655046619083</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb340655046619083</string>
+
+    <!--<string name="facebook_app_id">348049959438380</string>-->
+    <!--<string name="fb_login_protocol_scheme">fb348049959438380</string>-->
+
+
     <string name="rotate_btn_txt">ROTATE</string>
     <string name="login_btn">Login</string>
     <string name="roll_btn">ROLL</string>
